--- a/alayatodo/templates/todos.html
+++ b/alayatodo/templates/todos.html
@@ -3,9 +3,59 @@
 {% block content %}
 <div class="col-md-4 col-md-offset-4">
     <h1>Todo List:</h1>
+    <!-- todo change the PER_PAGE -->
+    <!-- <div>
+        <span>how many todo by page:</span>
+        <select id="pgs" class="col-md-offset-5">
+            <option value="5">5</option>
+            <option value="10">10</option>
+            <option value="20">20</option>
+        </select>
+    </div> -->
+    <nav>
+        <ul class="pagination">
+            {% if not pagination.has_prev %}
+            <li class="page-item disabled">
+                <a class="page-link" href="/todo/page/{{ pagination.page }}" tabindex="-1" aria-label="Previous">
+            {% else %}
+            <li class="page-item">
+                <a class="page-link" href="/todo/page/{{ pagination.page-1 }}" tabindex="-1" aria-label="Previous">
+            {% endif %}
+                    <span aria-hidden="true">&laquo;</span>
+                    <span class="sr-only">Previous</span>
+                </a>
+            </li>
+            {% for page in pagination.iter_pages() %}
+                {% if page %}
+                    {% if page != pagination.page %}
+                        <li class="page-item"><a class="page-link" href="/todo/page/{{ page }}">{{ page }}</a></li>
+                    {% else %}
+                        <li class="page-item active">
+                            <a class="page-link" href="">{{ page }}<span class="sr-only">(current)</span></a>
+                        </li>
+                    {% endif %}
+                {% else %}
+                    <span class="ellipsis">...</span>
+                {% endif %}
+            {% endfor %}
+            {% if not pagination.has_next %}
+            <li class="page-item disabled">
+                <a class="page-link" href="/todo/page/{{ pagination.page }}" aria-label="Next">
+            {% else %}
+            <li class="page-item">
+                <a class="page-link" href="/todo/page/{{ pagination.page+1 }}" aria-label="Next">
+            {% endif %}
+                    <span aria-hidden="true">&raquo;</span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
     <table class="table table-striped">
         <th>#</th><th>User</th><th>Description</th><th>Done</th><th>Delete</th>
-        {% for todo in todos %}
+        {% for i in range((pagination.page-1)*pagination.per_page, (pagination.page)*pagination.per_page) %}
+            {% set todo = todos[i] %}
+            {% if todo %}
             {% if todo.done == "TRUE" %}
             <tr class="success">
             {% else %}
@@ -33,10 +83,11 @@
                 </td>
                 <td>
                     <form method="post" action="{{ url_for('todo_delete', id=todo.id) }}">
-                        <button type="submit" class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-remove glyphicon-white"></span></button>
+                        <button type="submit" class="btn btn-xs btn-danger" id="remove" value="delete"><span class="glyphicon glyphicon-remove glyphicon-white"></span></button>
                     </form>
                 </td>
-            </tr>
+            </tr>  
+        {% endif %}
         {% endfor %}
         <tr>
             <form method="post" action="{{ url_for('todos_POST') }}">
